--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2011-06-27  Dominique Dumont  <domi.dumont@free.fr> 1.004
+
+    * no longer ship config-edit-approx. Replaced by
+      config-edit -appli approx
+    * added legal stuff and global doc to Approx model
+    * Updated model with cache and interval parameters
+
 2009-10-22  Dominique Dumont  <domi.dumont@free.fr> 1.003
 
 	* lib/Config/Model/Approx.pm (read): Convert old style
