--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 {{$NEXT}}
 
+2013-05-05 - 1.008
+
+    * Fixed pod test
+
 2013-05-04 - 1.007
 
     * depends directly on Mouse instead of Any::Moose
